# OracleDataExportforBigQuery-rust

./: .gitignore  AI_HANDOVER.md  ARCHITECTURE.md  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  TROUBLESHOOTING.md  batch_load_csv.sh  batch_load_parquet.sh  build_bundle.sh  build_windows.ps1  config_final_load.yaml  config_full_csv.yaml  config_full_parquet.yaml  env.example
.github/workflows/: ci.yml
config/: config.example.yaml  config_final_load.yaml  config_full_csv.yaml  config_full_parquet.yaml
docker/: Dockerfile.build
docs/: CROSS_PLATFORM.md  DEPLOYMENT.md  MAINTENANCE.md  WALKTHROUGH.md
oracle_rust_exporter/: .gitignore  Cargo.toml  README.md  build_bundle.sh  config_full.yaml  config_single.yaml  test_hash_config.yaml
oracle_rust_exporter/docs/: DEPLOYMENT.md
oracle_rust_exporter/src/: config.rs  exporter.rs  main.rs  metadata.rs
scripts/: batch_load_csv.sh  batch_load_parquet.sh  build_in_docker.sh  load_to_bq_parallel.sh  run_with_env.sh
src/: artifact_generator.rs  artifacts.rs  bigquery.rs  bigquery_ingestion.rs  bigquery_schema_mapper.rs  config.rs  coordinator.rs  export_coordinator.rs  exporter.rs  main.rs  metadata.rs  oracle_data_extractor.rs  oracle_metadata.rs  sql_utils.rs  validation.rs
src/application/: export_orchestrator.rs  mod.rs  orchestrator.rs  runtime.rs
src/domain/: bq_type_mapper.rs  entities.rs  error_definitions.rs  errors.rs  export_models.rs  mapping.rs  mod.rs
src/gcp/: mod.rs  (+2 more)
tests/: debug_vc.sql  run_all.sh  setup_features_test.sql  verify_bq_features.sh
(+79 files in other folders)
