[package]
name = "oracle_rust_exporter"
version = "0.2.0"
edition = "2021"

[dependencies]
oracle = "0.6"
r2d2 = "0.8"
flate2 = "1.0"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
num_cpus = "1.0"
crossbeam-channel = "0.5"
rayon = "1.10"
parquet = { version = "53.0", features = ["arrow"] }
arrow-array = "53.0"
arrow-schema = "53.0"
arrow-cast = "53.0"
once_cell = "1.18"
sha2 = "0.10.9"
hex = "0.4.3"
regex = "1.10"
tempfile = "3.8"
rust_decimal = "1.39.0"

[dev-dependencies]
