[package]
name = "oracle_rust_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
oracle = "0.6"
flate2 = "1.0"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
num_cpus = "1.0"
crossbeam-channel = "0.5"
